# TD

./: CMakeLists.txt  config.h  data_loader.cpp  data_loader.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp  model.cpp  model.h  syndrome_embedding.cpp  syndrome_embedding.h  train.cpp  train.h
